lab-gatekeeper-files/lab5/deployment-app-blue.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: quarkus-petclinic-blue
  labels:
    app: quarkus-petclinic-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quarkus-petclinic-blue
  template:
    metadata:
      labels:
        app: quarkus-petclinic-blue
        deployment: quarkus-petclinic-blue
    spec:
      containers:
        - name: quarkus-petclinic
          image: 'quay.io/dsanchor/quarkus-petclinic:in-mem'
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "200m"
              memory: "200Mi"
            requests:
              cpu: "100m"
              memory: "100Mi"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: route-petclinic-bluegreen
  labels:
    app: quarkus-petclinic-blue
spec:
  to:
    kind: Service
    name: quarkus-petclinic-blue
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
---
kind: Service
apiVersion: v1
metadata:
  name: quarkus-petclinic-blue
  labels:
    app: quarkus-petclinic-blue
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: quarkus-petclinic-blue
    deployment: quarkus-petclinic-blue
  type: ClusterIP
  sessionAffinity: None
